# sgt-dashboard

./: README.md  pyproject.toml  requirements.txt
sgt_dashboard/: __init__.py  shm_dash_app.py  shm_direct_price_reader.py
tests/: test_cli_smoke.py
