[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sgt-dashboard"
version = "0.1.0"
description = "Dash-based monitoring dashboard for SGT shared-memory market data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dash>=2.18",
  "plotly>=5.24",
]

[project.scripts]
sgt-shm-dash = "sgt_dashboard.shm_dash_app:main"
sgt-shm-reader = "sgt_dashboard.shm_direct_price_reader:main"

[tool.setuptools]
packages = ["sgt_dashboard"]
